HTML flickering problem solved!

--- a/wwwroot/css/Admin.scss
+++ b/wwwroot/css/Admin.scss
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+
+body { 
+    position: relative;
+}
+
 img {
     width: 100%;
 }
@@ -29,6 +34,9 @@ figure {
             figure {
 
                 position: relative;
+                display: flex;
+                flex-direction: column;
+                flex: 1;
 
                 div {
                     display: none;
@@ -37,14 +45,21 @@ figure {
                     align-items: center;
                     justify-content: center;
                     gap: 2em;
-                    padding-top: 2em;
-                    padding-bottom: 2em;
                     position: absolute; 
                     top: 0;
+                    bottom: 0; 
+                    left: 0; 
+                    right: 0;
                     background-color: rgba(0,0,0,0.6);
                     color: white;
                     width: 100%;
-                    z-index: 50000;
+                    z-index: 10000 !important;
+
+                    a { 
+                        color: white;
+                        position: relative;
+                        z-index: 50000;
+                    }
                 }
 
                 img {
@@ -99,35 +114,43 @@ figure {
     }
 }
 
-#Albums {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: repeat(8, 1fr);
-    align-items: center;
+#Gallery {
+    display: flex; 
+    flex-direction: column;
+    flex: 1;
     position: relative;
 
     section {
         &:nth-of-type(1) {
             display: grid;
-            grid-template-rows: repeat(4, 1fr);
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(4, auto);
+            grid-template-columns: repeat(4, auto);
 
 
             figure {
                 position: relative;
 
+                div { 
+                    background-color: rgba(0,0,0,0.6);
+                    flex-direction: column;
+                    flex: 1; 
+                    align-items: center;
+                    justify-content: center;
+                    text-align: center;
+                }
+
                 img {
+                    width: 100%;
+                }
+
+                svg { 
                     width: 100%;
                 }
             }
         }
     }
 
-    svg {
-        display: flex;
-        margin: 0;
-        border: none;
-    }
+  
 
 
     figcaption {
